pose choose option added

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.object_detection2">
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
    <application
         android:label="object_detection2"
         android:name="${applicationName}"
