--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   camera: ^0.10.5+2
   tflite: ^1.1.2
+  flutter_tts: ^3.6.3
 
 dev_dependencies:
   flutter_test:
