--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   camera: ^0.10.5+2
-  tflite: ^1.1.2
+  flutter_tflite: ^1.0.1
   flutter_tts: ^3.6.3
 
 dev_dependencies:
